descriptors/counter-test.yaml
kind: Deployment
apiVersion:	apps/v1
metadata:
  name: counter-test
  labels:
    app: counter
    traffic: outgoing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
      traffic: outgoing
      name: counter-test
  template:
    metadata:
      labels:
        app: counter
        traffic: outgoing
        name: counter-test
    spec:
      containers:
      - name: test
        image: busybox
        command: ['sh', '-c', 'while [ 1 ]; do wget -qO- http://$COUNTER_SERVICE_SERVICE_HOST:$COUNTER_SERVICE_SERVICE_PORT/counter && echo ""; sleep 2; done']
