descriptors/redis-deployment.yaml
kind: Deployment
apiVersion:	apps/v1
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      serviceAccountName: redis-sa
      containers:
      - name: redis-master
        image: k8s.gcr.io/redis
        readinessProbe:
          exec:
            command: ['sh', '-c', 'redis-cli info server']
        lifecycle:
          postStart:
            exec:
              command: ['sh', '-c', 'redis-cli config set appendonly yes']
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts: 
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data-pvc
