descriptors/counter-netpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: counter-access
spec:
  podSelector:
    matchLabels:
      app: counter
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
