descriptors/denyall-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-denyall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
