descriptors/egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-traffic
spec:
  podSelector:
    matchLabels:
      traffic: outgoing
  egress:
  - {}
  policyTypes:
  - Egress
